--- a/package.json
+++ b/package.json
@@ -9,15 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "babel-eslint": "^10.1.0",
+    "firebase": "^10.7.0",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.0.3"
+    "react-spinners": "^0.13.8"
   },
   "devDependencies": {
+    "@babel/core": "^7.23.5",
+    "@babel/preset-env": "^7.23.5",
     "autoprefixer": "^10.0.1",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
     "eslint": "^8",
-    "eslint-config-next": "14.0.3"
+    "eslint-config-next": "14.0.3",
+    "next": "^14.0.3",
+    "postcss": "^8",
+    "tailwindcss": "^3.3.0"
   }
 }
