--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "firebase": "^10.7.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^4.12.0",
     "react-spinners": "^0.13.8"
   },
   "devDependencies": {
